apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      volumes:
      - name: vaultwarden-storage
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
        - containerPort: 3012
        volumeMounts:
          - mountPath: /data/
            name: vaultwarden-storage
