apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: pw.arq.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: vaultwarden
          servicePort: 80
  tls:
  - hosts:
    - pw.arq.dev
    secretName: vaultwarden-cert
